[package]
name = "sufec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
home = "0.5.3"
rand = "0.8.4"
rsa = { version = "0.5.0", features = ["serde"] }

[dependencies.terminal]
git = "https://github.com/pypypypypypypypypyp/terminal"

[dependencies.limiter]
git = "https://github.com/pypypypypypypypypyp/limiter"
